--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -15,9 +15,9 @@
                 <div class="card-body">
                   <h5 class="card-title">Related Posts</h5>
                   <ul class="list-unstyled">
-                    <li><a href="./detail.html">Post 1</a></li>
-                    <li><a href="./detail.html">Post 2</a></li>
-                    <li><a href="./detail.html">Post 3</a></li>
+                    {% for post in related_posts %}
+                    <li><a href="{% url 'blog:detail' post.slug %}">{{ post.title }}</a></li>
+                    {% endfor %}
                   </ul>
                 </div>
               </div>
