--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -15,9 +15,9 @@
             </div>
         </div>
         <div class="row m-3">
-            {% if posts %}
+            {% if post_obj %}
 
-            {% for post in posts %}
+            {% for post in post_obj %}
             <div class="col-4 mb-4">
                 <div class="card">
                     <div class="card-body">
@@ -38,12 +38,45 @@
                 </div>
             </div>
             {% endfor %}
-            
+            <div class="col-12 my-3">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        {% if post_obj.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page=1" aria-label="First">
+                                <span aria-hidden="true">&laquo; first</span>
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ post_obj.previous_page_number }}" aria-label="Previous">
+                                <span aria-hidden="true">previous</span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if post_obj.has_next %}
+                        <li class="page-item"><span class="page-link">Page {{ post_obj.number }} of {{ post_obj.paginator.num_pages }}.</span></li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ post_obj.next_page_number }}" aria-label="Next">
+                                <span aria-hidden="true">next</span>
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page=?{{ post_obj.paginator.num_pages }}" aria-label="Last">
+                                <span aria-hidden="true">last &raquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+                
+            </div>
+
             {% else %}
             <div class="col-12">
                 <p>No posts found</p>
             </div>
             {% endif %}
+            
         </div>
         <div class="row">
            
